<resources>
    <string name="app_name">Zero Waste</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register_now"><u>Register Now</u></string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="name">Name</string>
    <string name="have_an_account">Have an account?</string>
    <string name="login_now"><u>Login Now</u></string>
    <string name="or">Or</string>
    <string name="get_started">Get Started</string>
    <string name="skip">SKIP</string>
    <string name="did_you_know"><u>Did you know?</u></string>
    <string name="next">Next</string>
    <string name="collection">Collection</string>
    <string name="chicken">Chicken</string>
    <string name="freezer">Freezer</string>
    <string name="expiring_in_2_days">Expiring in 2 days</string>
    <string name="product_name">Product Name</string>
    <string name="add_item">Add Item</string>
    <string name="edit_item">Edit Item</string>
    <string name="quantity">Quantity</string>
    <string name="location">Location</string>
    <string name="enter_email">Enter email</string>
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>
    <string name="reset_password">Reset password</string>
    <string name="verify_email">Verify Email</string>
    <string name="close">CLOSE</string>
    <string name="user_verify_email">Kindly verify your email to proceed.</string>
    <string name="expiring_in_1_day">Expiring in 1 day</string>
    <string name="expired">Expired</string>
    <string name="logout">Logout</string>
    <string name="category">Category</string>
    <string name="notification">Notification</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="name_of_user">%1$s\'s</string>
    <string name="edit">edit</string>
    <string name="anonymous">anonymous</string>
    <string name="confirm">confirm</string>
    <string name="product_image">product image</string>
    <string name="delete">delete</string>
    <string name="profile_image">profile image</string>
    <string name="upload_image">upload image</string>
    <string name="notification_title">%1$s in %2$s</string>
    <string name="back">back</string>
    <string name="save">Save</string>
    <string name="in">in</string>
    <string name="expiring_in">Expiring in 2 days</string>
    <string name="_05_01_2024_11_22_am">05/01/2024 | 11:22 am</string>
    <string name="unit">Unit</string>
    <string name="choose_image">Choose Image</string>
    <string name="take_photo">Take Photo</string>
    <string name="e_g_freezer_pantry">e.g: Freezer, Pantry</string>
    <string name="e_g_kg">e.g: kg</string>
    <string name="expiration_date">Expiration Date</string>
    <string name="expiring_in_days">Expiring in %1$s days</string>
    <string name="expired_days_ago">Expired %1$s days ago</string>
    <string name="expiring_in_day">Expiring in %1$s day</string>
    <string name="expired_day_ago">Expired %1$s day ago</string>
    <string name="logo">logo</string>
    <string name="horizontal_line">|</string>
    <string name="meat">Meat</string>
    <string name="yes_delete">Yes, Delete!</string>
    <string name="no_keep_it">No, Keep it</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="do_you_really_want_to_delete_the_record_this_process_can_t_be_undone">Do you really want to delete the record? This process can\'t be undone.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_data">No Data</string>
    <string name="food_waste">food waste</string>
    <string name="landing_page_1">Every year, the world throws away so much food that it could fill multiple football stadiums. This happens at every stage of the food journey, from farms to homes. Tackling this problem not only fights hunger but also eases the pressure on our planet\'s resources.</string>
    <string name="store_in_fridge">store in fridge</string>
    <string name="landing_page_2">Your fridge might be causing food waste. People often throw away a lot of food just because they forget it\'s in the back of the fridge. If we pay more attention to how we store food and organize our fridges better, we can avoid wasting good food that gets overlooked.</string>
    <string name="landing_page_3">Wasting food isn\'t just tossing what\'s on your plate—it squanders energy, water, and land used in food production. Reducing food waste saves money and conserves vital resources.</string>
    <string name="no_camera_found">No camera app found</string>
    <string name="select_food_category">Please select the food category</string>
</resources>