<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/DM_light_blue"
    android:padding="20dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height= "wrap_content"
        android:textSize="26sp"
        android:textColor="@color/LM_blue"
        android:text="@string/verify_email"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height= "wrap_content"
        android:textSize="20sp"
        android:textColor="@color/LM_blue"
        android:layout_marginVertical="16dp"
        android:text="@string/user_verify_email"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:backgroundTint="@color/DM_blue"
        android:layout_gravity="center"
        android:text="@string/close"
        android:textSize="16sp"
        android:textColor="@color/white" />


</LinearLayout>