<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_3"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".ui.screens.addUpdateFood.baseAddUpdate.BaseAddUpdateFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_back"
            android:contentDescription="@string/back"/>

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/add_item"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:orientation="vertical"
        android:paddingHorizontal="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_name"
            android:textStyle="bold" />
        <EditText
            android:id="@+id/etProductName"
            style="@style/Widget.Material3.TextInputEditText.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/text_view_outbox"
            android:textColorHint="@color/black"
            android:inputType="text"
            android:autofillHints="name"
            android:labelFor="@id/etProductName"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:layout_marginTop="15dp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidthFocused="1dp"
            app:hintTextColor="@color/black">

            <AutoCompleteTextView
                android:id="@+id/actvCategory"
                style="@style/Widget.Material3.TextInputEditText.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/text_view_outbox"
                android:textStyle="bold"
                android:inputType="none"
                android:labelFor="@id/actvCategory"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            />

        <EditText
            android:id="@+id/etLocation"
            style="@style/Widget.Material3.TextInputEditText.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/text_view_outbox"
            android:hint="@string/e_g_freezer_pantry"
            android:textColorHint="@color/black"
            android:inputType="text"
            android:autofillHints="freezer"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false"
            android:layout_marginTop="15dp">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quantity"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/etQuantity"
                    style="@style/Widget.Material3.TextInputEditText.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/text_view_outbox"
                    android:textColorHint="@color/black"
                    android:inputType="number"
                    android:autofillHints="1"/>


            </LinearLayout>
            <androidx.legacy.widget.Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.1" />
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/unit"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/etUnits"
                    style="@style/Widget.Material3.TextInputEditText.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/text_view_outbox"
                    android:hint="@string/e_g_kg"
                    android:textColorHint="@color/black"
                    android:inputType="text"
                    android:autofillHints="kg"/>

            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/expiration_date"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/etDate"
            style="@style/Widget.Material3.TextInputEditText.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/text_view_outbox"
            android:textColorHint="@color/black"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="20dp"
            android:paddingVertical="10dp">

            <androidx.cardview.widget.CardView
                android:layout_width="150dp"
                android:layout_height="150dp"
                app:cardCornerRadius="20dp">

                <ImageView
                    android:id="@+id/ivImage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_image"
                    android:contentDescription="@string/product_image"/>

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:orientation="vertical">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnChoose"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/LM_blue"
                    android:text="@string/choose_image"
                    app:cornerRadius="15dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnPhoto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/LM_blue"
                    android:paddingHorizontal="32dp"
                    android:text="@string/take_photo"
                    app:cornerRadius="15dp" />
            </LinearLayout>

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:backgroundTint="@color/LM_blue"
            android:text="@string/save" />

    </LinearLayout>



</LinearLayout>