<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_3"
    tools:context=".ui.screens.profile.ProfileFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:backgroundTint="@color/LM_gray"
        app:cardCornerRadius="35dp">

        <ImageView
            android:id="@+id/ic_logout"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="end"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:src="@drawable/ic_logout"
            android:contentDescription="@string/logout"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginVertical="30dp"
            android:orientation="horizontal">
            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    app:cardCornerRadius="150dp">

                    <ImageView
                        android:id="@+id/ivImage"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:scaleType="fitXY"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_image"
                        android:contentDescription="@string/profile_image"/>
                </androidx.cardview.widget.CardView>

                <ImageView
                    android:id="@+id/ivAddImage"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/ic_add"
                    android:layout_gravity="end|bottom"
                    android:background="@color/white"
                    android:translationZ="90dp"
                    android:contentDescription="@string/upload_image"/>

            </FrameLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="25dp"
                android:orientation="vertical">
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                    <LinearLayout
                        android:id="@+id/llName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:id="@+id/tvName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/anonymous"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            android:textStyle="bold" />
                        <ImageView
                            android:id="@+id/ivEdit"
                            android:layout_width="15dp"
                            android:layout_height="15dp"
                            android:layout_gravity="center"
                            android:layout_marginStart="8dp"
                            android:src="@drawable/ic_edit"
                            android:contentDescription="@string/edit" />
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/llEditName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:visibility="gone"
                        >
                        <EditText
                            android:id="@+id/etName"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:hint="@string/name"
                            android:inputType="text"
                            android:autofillHints="name" />
                        <ImageView
                            android:id="@+id/ivTick"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_gravity="center"
                            android:layout_marginStart="8dp"
                            android:src="@drawable/ic_tick"
                            android:contentDescription="@string/confirm" />
                        <ImageView
                            android:id="@+id/ivCancel"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_gravity="center"
                            android:layout_marginStart="8dp"
                            android:src="@drawable/ic_close"
                            android:contentDescription="@android:string/cancel" />
                    </LinearLayout>
                </FrameLayout>
                <TextView
                    android:id="@+id/tvEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/anonymous"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_marginTop="15dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notification"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvNotification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp" />
    </LinearLayout>

    <androidx.legacy.widget.Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="0.5" />
</LinearLayout>
